--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "roundplayer",
-  "version": "1.0.0",
+  "name": "start",
+  "version": "0.0.2",
   "description": "Simple audio player with round design",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nw www/"
+    "start": "nw www/",
+    "build": "node build.js"
   },
   "keywords": [],
   "author": "DiabloSat",
