--- a/www/package.json
+++ b/www/package.json
@@ -1,1 +1,38 @@
-{"name":"www","version":"1.0.0","description":"","main":"index.html","scripts":{"test":"echo \"Error: no test specified\" && exit 1"},"window":{"title":"RoundPlayer","icon":"assets/icon.png","toolbar":false,"resizable":false,"fullscreen":false,"show_in_taskbar":true,"frame":true,"position":"center","width":450,"height":750,"show":true,"kiosk":false,"theme":"dark"},"webkit":{"plugin":true,"java":false,"page-cache":false},"keywords":[],"author":"DiabloSat","license":"ISC","type":"module","dependencies":{"bootstrap":"^5.1.3","bootstrap-icons":"^1.8.1","jquery":"^3.6.0"}}
+{
+  "name": "RoundPlayer",
+  "version": "0.0.2",
+  "description": "Simple audio player with round design",
+  "main": "index.html",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "window": {
+    "title": "RoundPlayer",
+    "icon": "assets/icon.png",
+    "toolbar": false,
+    "resizable": false,
+    "fullscreen": false,
+    "show_in_taskbar": true,
+    "frame": true,
+    "position": "center",
+    "width": 450,
+    "height": 750,
+    "show": true,
+    "kiosk": false,
+    "theme": "light"
+  },
+  "webkit": {
+    "plugin": true,
+    "java": false,
+    "page-cache": false
+  },
+  "keywords": [],
+  "author": "DiabloSat",
+  "license": "ISC",
+  "type": "module",
+  "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
+    "jquery": "^3.6.0"
+  }
+}
